Added gproc, some game_session stuff and basic ping.

--- a/src/apps/thor/rebar.config
+++ b/src/apps/thor/rebar.config
@@ -1,6 +1,7 @@
 {deps, 
 	[
         {cowboy, ".*", {git, "git://github.com/extend/cowboy.git", {tag, "0.8.1"}}},
-        {'lager', ".*", {git, "git://github.com/basho/lager.git", {tag, "1.2.2"}}}
+        {lager, ".*", {git, "git://github.com/basho/lager.git", {tag, "1.2.2"}}},
+        {gproc, ".*", {git, "http://github.com/esl/gproc.git", "master"}}
     ]
 }.
