--- a/src/rebar.config
+++ b/src/rebar.config
@@ -1,4 +1,4 @@
-{sub_dirs, ["apps/thor", "apps/mochijson2", "rel"]}.
+{sub_dirs, ["apps/thor", "apps/mochijson2", "apps/uuid", "rel"]}.
 
 {erl_opts, [debug_info, warn_shadow_vars, warn_obsolete_guard,
             warn_unused_import]}.
